# visual-signature

./: .app.py.~undo-tree~  app.py  pyproject.toml
layout/: .css.py.~undo-tree~  .sidebar.py.~undo-tree~  sidebar.py
pages/backends/: .lib.py.~undo-tree~  .page.py.~undo-tree~
pages/text/: .lib.py.~undo-tree~  .page.py.~undo-tree~  lib.py  lib.py~
