[project]
name = "visual-signature"
version = "0.1.0"
description = ""
authors = [
    {name = "Christian O'Cadiz Gustad",email = "cgustad@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash (>=3.3.0,<4.0.0)",
    "roughpy (>=0.2.0,<0.3.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "dash-bootstrap-components (>=2.0.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
